fix slider taking more than 100% width on mobile

--- a/assets/css/_wordpress.scss
+++ b/assets/css/_wordpress.scss
@@ -96,4 +96,10 @@ span.target {
       margin-right: auto !important;
     }
   }
+
+  // Slider
+  div.wp-block-advgb-images-slider.advgb-images-slider-block {
+    margin-left: 25px;
+    margin-right: 25px;
+  }
 }
